js works correctly, layout issues fixed

--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ main {
 
 
 .project {
-    min-height: 100%;
+    /* min-height: 100%; */
 }
 
 #footer {
@@ -78,9 +78,9 @@ main {
 
 .heading-text {
     font-family: 'Inconsolata', sans-serif;
-    position: relative;
-    left: 8%;
-    top: 30%;
+    /* position: relative; This one line makes it scroll horizontally*/
+    /* left: 8%;
+    top: 30%; */
     font-size: 1.7em;
 }
 
@@ -115,7 +115,7 @@ main {
 
 /* Link & button styling */
 
-a:link {
+/* a:link {
     text-decoration: none;
     color: #051618;
 }
@@ -149,7 +149,7 @@ main > a:link {
 
 main > a:visited {
     color: #EBF2FA;
-}
+} */
 
 .email-me {
     /* position: absolute;
@@ -217,13 +217,13 @@ main > a:visited {
     }
 
     .self {
-        width: 15%;
-        left: 15%;
+        /* width: 15%;
+        left: 15%; */
     }
 
     .description {
-        left: 35%;
-        right: 15%;
+        /* left: 35%;
+        right: 15%; */
         font-size: 1.4em;
     }
 }
